Add Calendar Agenda function

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "@types/react-native-calendars": "^1.1264.3",
     "expo": "~43.0.2",
     "expo-image-manipulator": "~10.1.2",
     "expo-image-picker": "~11.0.3",
@@ -25,6 +26,7 @@
     "react-native": "0.64.3",
     "react-native-calendars": "^1.1270.0",
     "react-native-elements": "^3.4.2",
+    "react-native-paper": "^4.10.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
     "react-native-web": "0.17.1",
