--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "ayudante",
+  "homepage": "https://hughesmarissa.github.io/Ayudante/",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b main -d build",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -21,6 +24,7 @@
     "expo-permissions": "~13.0.3",
     "expo-secure-store": "~11.0.3",
     "expo-status-bar": "~1.1.0",
+    "gh-pages": "^3.2.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
